--- a/pml-paw.Rmd
+++ b/pml-paw.Rmd
@@ -2,7 +2,9 @@
 title: "Predict Excercise Manner"
 author: "Zvonko Kosic"
 date: "August 26, 2016"
-output: html_document
+output: 
+  html_document:
+    self_contained: false
 ---
 
 ```{r setup, include=FALSE}
